// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiProgress color #885522 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--customColor"
  style="color:#885522"
/>
`;

exports[`EuiProgress color accent is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--accent"
/>
`;

exports[`EuiProgress color danger is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--danger"
/>
`;

exports[`EuiProgress color primary is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--primary"
/>
`;

exports[`EuiProgress color secondary is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--secondary"
/>
`;

exports[`EuiProgress color subdued is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--subdued"
/>
`;

exports[`EuiProgress color success is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--success"
/>
`;

exports[`EuiProgress color vis0 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis0"
/>
`;

exports[`EuiProgress color vis1 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis1"
/>
`;

exports[`EuiProgress color vis2 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis2"
/>
`;

exports[`EuiProgress color vis3 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis3"
/>
`;

exports[`EuiProgress color vis4 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis4"
/>
`;

exports[`EuiProgress color vis5 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis5"
/>
`;

exports[`EuiProgress color vis6 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis6"
/>
`;

exports[`EuiProgress color vis7 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis7"
/>
`;

exports[`EuiProgress color vis8 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis8"
/>
`;

exports[`EuiProgress color vis9 is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--vis9"
/>
`;

exports[`EuiProgress color warning is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--warning"
/>
`;

exports[`EuiProgress has labelProps 1`] = `
Array [
  <div
    class="euiProgress__data euiProgress__data--success"
  >
    <span
      class="euiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--success testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`EuiProgress has max 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="euiProgress euiProgress--native euiProgress--m euiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
/>
`;

exports[`EuiProgress has value 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress has valueText and label 1`] = `
Array [
  <div
    class="euiProgress__data euiProgress__data--success"
  >
    <span
      class="euiProgress__label"
    >
      Label
    </span>
    <span
      class="euiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="true"
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--success testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`EuiProgress is determinate 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="euiProgress euiProgress--native euiProgress--m euiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
  value="50"
/>
`;

exports[`EuiProgress is indeterminate 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress size l is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--l euiProgress--success"
/>
`;

exports[`EuiProgress size m is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--success"
/>
`;

exports[`EuiProgress size s is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--s euiProgress--success"
/>
`;

exports[`EuiProgress size xs is rendered 1`] = `
<div
  class="euiProgress euiProgress--indeterminate euiProgress--xs euiProgress--success"
/>
`;

exports[`EuiProgress valueText is true 1`] = `
Array [
  <div
    class="euiProgress__data euiProgress__data--success"
  >
    <span
      class="euiProgress__valueText"
    >
      50%
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--success testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;
